textarea overflow scroll fix 2

--- a/development/client/less/mainLayout.less
+++ b/development/client/less/mainLayout.less
@@ -41,7 +41,7 @@ html {
         }
 
         textarea {
-          flex: 0 0 150px;
+          flex: 0 1 150px;
           resize: none;
         }
       }
